fix: center hero images on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1130,7 +1130,6 @@ img.footer-logo {
 
   .hero-images {
     max-width: 350px;
-    margin: 0
   }
 
   .hero-images img:not(.line) {
